--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,45 @@
     box-sizing: border-box;
 }
 
+html{
+    font-size: 93.75%;
+}
+
 body{
     background: #f0f2f5;
     font-family: 'Poppins', sans-serif;
 }
 
+/* Apenas para leitores de telas */
+.sr-only{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+     margin: -1px;
+     overflow: hidden;
+     clip: rect(0,0,0,0);
+     white-space: nowrap;
+     border-width: 0;
+}
 .container{
     width: min(90vw, 800px);
     margin: auto;
+}
+/*==== Links e Botões =====*/
+
+a{
+    color: #49AA26;
+    text-decoration: none;
+}
+
+a:hover{
+    color: #3dd705;
+}
+
+.button.new{
+    display: inline-block;
+    margin-bottom: .8rem;
 }
 
 /*==== Titles =====*/
@@ -44,6 +75,7 @@ header{
 /*==== BALANCE =====*/
 #balance{
     margin-top: -8rem;
+    /* display: flex; */
 }
 #balance h2{
     color: white;
@@ -61,6 +93,10 @@ header{
 .card h3{
     font-weight: normal;
     font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
 }
 
 .card p{
@@ -77,7 +113,9 @@ header{
 /*==== TRANSACTIONS =====*/
 #data-table{
     width: 100%;
-    
+    border-spacing: 0 0.5rem;
+    display: block;
+    overflow-x: auto;
 }
 table th{
     background: white;
@@ -103,7 +141,11 @@ table tr:hover{
 
 table thead tr th:first-child,
 table tbody tr td:first-child{
-    border-radius: 00.5rem 0 0 0.5rem;
+    border-radius: 00.25rem 0 0 0.25rem;
+}
+table thead tr th:last-child,
+table tbody tr td:last-child{
+    border-radius: 0 00.25rem  0.25rem 0;
 }
 
 td.description{
@@ -123,6 +165,19 @@ footer{
     padding: 4rem 0 2rem;
     color: var(--dark-blue);
     opacity: 0.6;
+}
+
+/* ====RESPONSIVE ==== */
+@media (min-width: 800px){
+    html{
+        font-size: 87.5%;
+    }
+
+    #balance{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 2rem;
+    }
 }
 
 
